--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+
+  <title>Financial Ratio Analysis</title>
+
   <link rel="stylesheet" href="/css/jass.css">
+
   <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
+
   <div class="flex-column justify-space-around">
+
     <header class="display-flex justify-space-between align-center p-2">
+
       <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+
+        <a href="/">Financial Ratio Analysis </a>
+
       </h1>
+
       <nav>
+
         <!-- Conditionally render login or logout links -->
+
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
+
+        <a href="/main">MAIN</a> |
+
         <button class="no-button" id="logout">logout</button>
+
         {{else}}
-        <a href="/login">login</a>
+
+        <a href="/login">Login</a>
+
         {{/if}}
+
       </nav>
+
     </header>
+
     <main class="container container-fluid mt-5">
+
       <!-- Render the sub layout -->
+
       {{{ body }}}
+
     </main>
+
     <footer>
+
       
     </footer>
+
   </div>
 
   <!-- Render script for logged in users only -->
+
   {{#if logged_in}}
+
   <script src="/js/logout.js"></script>
+
   {{/if}}
+
 </body>
 
 </html>
