--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,9 +28,25 @@
 
       <nav>
 
-        <!-- Conditionally render login or logout links -->
-
         {{#if logged_in}}
+
+      <div class="input-group">
+
+      <div class="form-outline">
+
+        <input type="search" id="form1" class="form-control" />
+
+        <label class="form-label" for="form1">Search Company</label>
+
+      </div>
+
+        <button type="button" class="btn btn-primary">
+
+        <i class="fas fa-search"></i>
+
+        </button>
+
+      </div>
 
         <a href="/main">MAIN</a> |
 
@@ -48,9 +64,35 @@
 
     <main class="container container-fluid mt-5">
 
-      <!-- Render the sub layout -->
+      {{!-- Add section for previous searches!!! --}}
 
-      {{{ body }}}
+
+      {{!-- This div is for company ticker and description --}}
+      <div>
+
+
+      </div>
+
+
+      {{!-- This div is for key data --}}
+      <div>
+
+
+      </div>
+
+
+      {{!-- This div is for ratios & explanation  --}}
+      <div>
+
+        {{{ body }}}
+
+      </div>
+      
+  {{!-- This div is for CONCLUSION OF STRENGTH --}}
+      <div>
+
+
+      </div>
 
     </main>
 
