basic outline for main page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
 
 <body>
 
+  
   <div class="flex-column justify-space-around">
 
     <header class="display-flex justify-space-between align-center p-2">
@@ -67,32 +68,12 @@
       {{!-- Add section for previous searches!!! --}}
 
 
-      {{!-- This div is for company ticker and description --}}
+      {{!-- Explain site functionality / INTRO --}}
       <div>
 
 
       </div>
 
-
-      {{!-- This div is for key data --}}
-      <div>
-
-
-      </div>
-
-
-      {{!-- This div is for ratios & explanation  --}}
-      <div>
-
-        {{{ body }}}
-
-      </div>
-      
-  {{!-- This div is for CONCLUSION OF STRENGTH --}}
-      <div>
-
-
-      </div>
 
     </main>
 
