--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -33,7 +33,23 @@
 
       <div class="input-group">
 
-        <a href="/main">MAIN</a> ||
+      <div class="form-outline">
+
+        <input type="search" id="form1" class="form-control" />
+
+        <label class="form-label" for="form1">Search Company</label>
+
+      </div>
+
+        <button type="button" class="btn btn-primary">
+
+        <i class="fas fa-search"></i>
+
+        </button>
+
+      </div>
+
+        <a href="/main">MAIN</a> |
 
         <button class="no-button" id="logout">logout</button>
 
@@ -49,7 +65,12 @@
 
     <main class="container container-fluid mt-5">
 
-        {{{ body }}}
+
+      <div>
+          
+
+      </div>
+
 
     </main>
 
@@ -70,4 +91,4 @@
 
 </body>
 
-</html>
+</html> --}}
