--- a/views/ratio.handlebars
+++ b/views/ratio.handlebars
@@ -1,4 +1,101 @@
+{{!-- 
+
 //company data
 //ratios
 //description of company
-//charts
+//charts 
+
+--}}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <meta charset="UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Financial Ratio Analysis</title>
+
+  <link rel="stylesheet" href="/public/css/jass.css">
+
+  <link rel="stylesheet" href="/public/css/style.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+</head>
+
+<body>
+
+  
+
+    <header class="display-flex justify-space-between align-center p-2">
+
+      <h1>
+
+        <a href="/">Financial Ratio Analysis </a>
+
+      </h1>
+
+        <div class="navbar">
+
+
+                <div class="search-container">
+        
+                    <form action="/action_page.php">
+
+                    <input class="searchbar" type="text" placeholder="Search.." name="search">
+
+                    <button type="submit"><i class="fa fa-search"></i></button>
+
+                </form>
+
+                </div>
+        
+
+        </div>
+
+    </header>
+
+        <div>
+            
+        <div class="dropdown">
+            <button class="dropbtn" onclick="myFunction()">Choose Ratio Type
+              <i class="fa"></i>
+            </button>
+            <div class="dropdown-content" id="myDropdown">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+            </div> 
+
+        {{!-- chart --}}
+        <canvas id="myChart" width="800" height="400"></canvas>
+
+
+        </div>
+
+    <div>
+
+
+        {{!-- How to use: --}}
+
+
+
+        
+    </div>
+
+    <div>
+
+        {{!-- ratios div --}}
+
+
+    </div>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+    <script src="/public/js/script.js"></script>
+
+    </body>
