--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,12 +12,11 @@
 
   <link rel="stylesheet" href="/css/style.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
-
-  
-  <div class="flex-column justify-space-around">
 
     <header class="display-flex justify-space-between align-center p-2">
 
@@ -27,27 +26,35 @@
 
       </h1>
 
-      <nav>
+        <div class="navbar">
 
-        {{#if logged_in}}
+          {{#if logged_in}}
 
-      <div class="input-group">
+            <a href="/main">Home</a>
 
-        <a href="/main">MAIN</a> ||
+               <div class="search-container">
+        
+                <form action="/action_page.php">
 
-        <button class="no-button" id="logout">logout</button>
+                  <input type="text" placeholder="Search.." name="search">
 
-        {{else}}
+                  <button type="submit"><i class="fa fa-search"></i></button>
 
-        <a href="/login">Login</a>
+                </form>
 
-        {{/if}}
+              </div>
+            
+             {{else}}
 
-      </nav>
+            <a href="/login">Login</a>
+
+             {{/if}}
+
+          </div>
 
     </header>
 
-    <main class="container container-fluid mt-5">
+    <main class="container container-fluid">
 
         {{{ body }}}
 
@@ -58,7 +65,6 @@
       
     </footer>
 
-  </div>
 
   <!-- Render script for logged in users only -->
 
