--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,70 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-
   <meta charset="UTF-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Financial Ratio Analysis</title>
-
   <link rel="stylesheet" href="/css/jass.css">
-
   <link rel="stylesheet" href="/css/style.css">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
-
     <header class="display-flex justify-space-between align-center p-2">
-
       <h1>
-
         <a href="/">Financial Ratio Analysis </a>
-
       </h1>
-
         <div class="navbar">
-
           {{#if logged_in}}
-
-            <a href="/main">Home</a>
-
+            <a href="/">Home</a>
                <div class="search-container">
-        
                 <form action="/action_page.php">
-
                   <input type="text" placeholder="Search.." name="search">
-
                   <button type="submit"><i class="fa fa-search"></i></button>
-
                 </form>
-
               </div>
-            
              {{else}}
-
             <a href="/login">Login</a>
-
              {{/if}}
 
           </div>
-
     </header>
 
     <main class="container container-fluid">
-
         {{{ body }}}
-
     </main>
 
     <footer>
 
       
     </footer>
-
 
   <!-- Render script for logged in users only -->
 
