changed nav bar to have login/logout button

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-
+{{!-- 
         
         
         <nav>
@@ -13,7 +13,7 @@
             </div>
             <a href='/'>MAIN</a>
             <button class='no-button' id='logout'>logout</button>
-        </nav>
+        </nav> --}}
 
         <div>
           <p> Use this site to gather financial statements, review ratios and make the best financial decisions</p>            
