--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -57,7 +57,8 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-  font-family: monospace, monospace;
+ font-family: 'Bebas Neue', cursive;
+
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -100,8 +101,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
+  font-family: 'Bebas Neue', cursive;  /* 1 */
   font-size: 1em;
   /* 2 */
 }
@@ -153,8 +153,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
+  font-family: 'Bebas Neue', cursive;  /* 1 */
   font-size: 100%;
   /* 1 */
   line-height: 1.15;
@@ -356,8 +355,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 16px;
+  font-family: 'Bebas Neue', cursive;  font-size: 16px;
   color: #1a1a1a;
 }
 
