--- a/views/ratio.handlebars
+++ b/views/ratio.handlebars
@@ -1,7 +1,7 @@
 
 
         <div>
-          
+
           <div class="search-container">
         
                     <form action="/action_page.php">
@@ -33,6 +33,4 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-    <script src="/public/js/script.js"></script>
-
-    </body>
+    <script src="/public/js/ratio.js"></script>
