--- a/views/ratio.handlebars
+++ b/views/ratio.handlebars
@@ -3,12 +3,11 @@
         <div>
 
           <div class="search-container">
-        
-                    <form action="/action_page.php">
+    
 
-                    <input class="searchbar" type="text" placeholder="Search.." name="search">
+                    <input class="searchbar" id="user-input" type="text" placeholder="Search.." name="search">
 
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <button type="submit" id="search-button"><i class="fa fa-search"></i></button>
 
                 </form>
 
