--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,6 @@
 *{
   font-family: 'Bebas Neue', cursive;
-  
 }
-
-body{
-  background-color: antiquewhite;
-}
-
 header, .project:not(:last-child) {
   background-color: #333;
   border-bottom: 1px solid #ccc;
@@ -40,7 +34,7 @@ header, .project:not(:last-child) {
 }
 
 .navbar a {
-  float: right;
+  float: left;
   font-size: 16px;
   color: white;
   text-align: center;
@@ -134,8 +128,6 @@ input[type=text] {
 
 .intro-body-text{
   text-align: center;
-  margin-top: 10px;
-  font-weight: 200;
 }
 
 .example-chart{
@@ -153,17 +145,4 @@ ol{
 .body-text-steps{
   text-align: center;
   font-size: 30px;
-}
-
-.ratiohbrs{
-  margin: 10px;
-}
-
-#ratioText{
-  margin-left: 70px;
-  margin-top: 20px;
-}
-
-#ratioChoice{
-  margin-left: 75px;
 }
