--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,12 @@
 
 
 <div>
+          
+  <p class="intro-text"> Welcome to our financial ratio analysis application</p>
+
   <p class="intro-body-text">In this application you will be able to search and compare companies over the past 5 years using their financial ratios so that you may create accurate financial decisions. </p>
 
-  <u><p class="body-text-steps"> How to use: </p></u>
+  <u><p class="body-text-steps"> Please follow these steps to get started: </p></u>
 
     <ol>
       <li>Sign-up or login by clicking on the Login button in the top right.</li>
@@ -14,7 +17,7 @@
    
 </div>
 
-   <p class="intro-body-text"> It will generate a chart similar to the one below.</p>
+   <p class="intro-body-text"> It will generate a chart similar to the one below. </p>
 
 
 <div>
