--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 
 <div>
           
-  <p class="intro-text"> Welcome to our financial ratio analysis application</p>
+  <p class="intro-text"> Welcome!</p>
 
   <p class="intro-body-text">In this application you will be able to search and compare companies over the past 5 years using their financial ratios so that you may create accurate financial decisions. </p>
 
@@ -17,7 +17,7 @@
    
 </div>
 
-   <p class="intro-body-text"> It will generate a chart similar to the one below. </p>
+   <p class="intro-body-text"> After completing the steps a chart similar to the one below will generate. </p>
 
 
 <div>
