--- a/views/ratio.handlebars
+++ b/views/ratio.handlebars
@@ -90,7 +90,7 @@
             <p class="card-text">Sector: <span id="company-sector{{portfolio.id}}"></span></p>
           </div>
           <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3">
-            <img src="" alt="Company Icon" id="company-icon{{portfolio.id}}">
+            <img src="" alt="Company Icon"class="logoimage" id="company-icon{{portfolio.id}}">
             <p class="card-text">Ticker: {{portfolio.company_symbol}}</span></p>
             <p class="card-text">IPO Date: <span id="company-ipo{{portfolio.id}}"></span></p>
           </div>
